# openprototype

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  install.ps1  install.sh  release-please-config.json
.github/workflows/: cd.yml  ci.yml  release-please.yml
crates/backend/: CHANGELOG.md  Cargo.toml
crates/backend/src/: audio.rs  blit.wgsl  compositor.rs  lib.rs  renderer.rs  window.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: audio.rs  bounded.rs  framebuffer.rs  game.rs  game_state.rs  input.rs  lib.rs
crates/disc/: CHANGELOG.md  Cargo.toml
crates/disc/src/: cue.rs  disc.rs  error.rs  iso9660.rs  lib.rs  manifest.rs  sector.rs
crates/disc/tests/: image.rs  synthetic.rs
crates/formats/: CHANGELOG.md  Cargo.toml
crates/formats/src/: background.rs  bdy.rs  bin.rs  color.rs  error.rs  fli.rs  font.rs  high.rs  image.rs  lib.rs  pal.rs  pcm.rs  raw.rs  smp.rs  sprite.rs  start_exe.rs  wad.rs
crates/formats/tests/: assets.rs
crates/game/: CHANGELOG.md  Cargo.toml
crates/game/src/: app.rs  assets.rs  background.rs  combat.rs  fade.rs  flic_player.rs  highscores.rs  hud.rs  ingame_menu.rs  levels.rs  lib.rs  main.rs  parallax.rs  playfield.rs  savegame.rs  savestore.rs  scenery.rs  screen.rs  sfx.rs  ship.rs  shots.rs  spawns.rs  stars.rs  zoom.rs
crates/game/src/core/: audio.rs  flic_player.rs  framebuffer.rs  game.rs  input.rs  mod.rs
crates/game/src/level/: ai_common.rs  generator.rs  level_1.rs  level_3.rs  level_5.rs  level_7.rs  mod.rs  prng.rs  slot.rs  spawn.rs
crates/game/src/level/l1/: ai.rs  layout.rs  mod.rs
crates/game/src/level/l3/: ai.rs  layout.rs  mod.rs
crates/game/src/level/l5/: ai.rs  layout.rs  mod.rs
crates/game/src/level/l7/: ai.rs  layout.rs  mod.rs
crates/game/src/level/race/: ai.rs  mod.rs
crates/game/src/platform/: audio.rs  mod.rs  window.rs
crates/game/src/scene/: ending.rs  gameover.rs  highscore_entry.rs  highscores.rs  intro.rs  level.rs  list_menu.rs  menu.rs  mod.rs  music.rs  transition.rs
crates/game/src/spawns/: ai_l1.rs  ai_l3.rs  ai_l5.rs  ai_l7.rs  ai_race.rs
crates/game/tests/fixtures/: l1.psg  l2-race.psg  l3.psg  l4-race.psg  l5.psg  l6-race.psg  l7.psg
crates/install/: CHANGELOG.md  Cargo.toml
crates/install/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/integration-tests/: CHANGELOG.md  Cargo.toml  golden.sha256
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: audio.rs  decode.rs  golden.rs
crates/tools/: CHANGELOG.md  Cargo.toml
crates/tools/src/: lib.rs
reference/: combat.md  deviations.md  enemy-ai.md  entity-buffers.md  hud.md  race-mode.md  render-pipeline.md  savegame.md  sfx.md  start-exe.md
reference/formats/: README.md  bdy.md  bin.md  disc.md  fli.md  font.md  level-layout.md  smp.md  sp.md  wad.md
