[workspace]
resolver = "3"
members = ["crates/backend", "crates/core", "crates/disc", "crates/formats", "crates/game", "crates/integration-tests", "crates/tools"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[workspace.dependencies]
prototype-formats = { path = "crates/formats" }
prototype-disc = { path = "crates/disc" }
openprototype-core = { path = "crates/core" }
openprototype = { path = "crates/game", default-features = false }
openprototype-backend = { path = "crates/backend", default-features = false }
