[workspace]
resolver = "3"
members = ["crates/backend", "crates/core", "crates/disc", "crates/formats", "crates/game", "crates/install", "crates/integration-tests", "crates/tools"]

[workspace.package]
edition = "2024"
rust-version = "1.95"
publish = false
license = "GPL-3.0-or-later"

[workspace.dependencies]
prototype-formats = { path = "crates/formats", version = "0.1.0" }
prototype-disc = { path = "crates/disc", version = "0.1.0" }
openprototype-core = { path = "crates/core", version = "0.1.0" }
openprototype = { path = "crates/game", version = "0.1.0", default-features = false }
openprototype-backend = { path = "crates/backend", version = "0.1.0", default-features = false }
openprototype-install = { path = "crates/install", version = "0.1.0" }
