[package]
name = "openprototype-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[features]
default = ["audio"]
# CD-DA playback via rodio (cpal). Off => the silent fallback player is used, so
# the build needs no system audio libraries (ALSA on Linux).
audio = ["dep:rodio"]
# Enable the tests that need the original CD image. Off by default so a plain
# `cargo test` reports them as ignored rather than running them.
disc-tests = []

[dependencies]
openprototype-core.workspace = true
prototype-formats.workspace = true
prototype-disc.workspace = true
anyhow = "1.0.102"
winit = "0.30.13"
pixels = "0.17.1"
rodio = { version = "0.22.2", default-features = false, features = ["playback"], optional = true }
