[package]
name = "prototype-disc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[features]
# Enable the integration tests that need the original CD image. Off by default
# so a plain `cargo test` reports them as ignored rather than running them.
disc-tests = []

[dependencies]
thiserror = "2.0.18"
