[package]
name = "prototype-disc"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[features]
# Enable the integration tests that need the original CD image. Off by default
# so a plain `cargo test` reports them as ignored rather than running them.
disc-tests = []

[dependencies]
crc32fast = "1.5.0"
thiserror = "2.0.18"
