[package]
name = "prototype"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "prototype"
path = "src/lib.rs"

[[bin]]
name = "prototype"
path = "src/main.rs"

[features]
default = ["desktop"]
# The winit + pixels window backend. Off => the pure core builds without the
# GPU stack (wgpu), which keeps headless examples and tests fast.
desktop = ["dep:winit", "dep:pixels"]

[dependencies]
prototype-formats.workspace = true
prototype-disc.workspace = true
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
winit = { version = "0.30.13", optional = true }
pixels = { version = "0.17.1", optional = true }

[dev-dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }
