[package]
name = "openprototype"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "openprototype"
path = "src/lib.rs"

[[bin]]
name = "openprototype"
path = "src/main.rs"

[features]
default = ["desktop", "audio"]
# The windowing backend (winit + pixels). Off => only the headless runtime
# builds, which keeps examples and tests free of the GPU stack.
desktop = ["dep:openprototype-backend", "dep:openprototype-install"]
# CD-DA playback via rodio (cpal). Off => the backend uses a silent fallback
# player, so the build needs no system audio libraries (ALSA on Linux).
audio = ["openprototype-backend/audio"]
# Enable the tests that need the original CD image. Off by default so a plain
# `cargo test` reports them as ignored rather than running them.
disc-tests = []

[dependencies]
openprototype-core.workspace = true
openprototype-backend = { workspace = true, optional = true }
openprototype-install = { workspace = true, optional = true }
prototype-formats.workspace = true
prototype-disc.workspace = true
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
strum = { version = "0.28.0", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
image = { version = "0.25.10", default-features = false, features = ["png"] }
tempfile = "3.23.0"
