[package]
name = "openprototype-install"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
prototype-formats.workspace = true
prototype-disc.workspace = true
anyhow = "1.0.102"
directories = "6.0.0"
image = { version = "0.25.10", default-features = false, features = ["png", "ico"] }

[target.'cfg(target_os = "macos")'.dependencies]
icns = "0.3.1"
