[package]
name = "openprototype-integration-tests"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true

[features]
# Enable the integration tests that need the original CD image. Off by default
# so a plain `cargo test` reports them as ignored rather than running them.
disc-tests = []

[dependencies]
prototype-disc.workspace = true

[dev-dependencies]
openprototype = { path = "../game", default-features = false }
prototype-formats.workspace = true
sha2 = "0.10"
