[package]
name = "openprototype-tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crc32fast = "1.5.0"
image = { version = "0.25.10", default-features = false, features = ["png", "gif"] }
openprototype.workspace = true
openprototype-core.workspace = true
prototype-disc.workspace = true
prototype-formats.workspace = true
